tests/reference/asr-test_dict_const-69479e2.stderr
semantic error: Type name is not implemented yet.
 --> tests/../integration_tests/test_dict_const.py:8:12
  |
8 |     assert d_int.get("a") == 1
  |            ^^^^^^^^^^^^^^ 
